# qurious-shell

./: Cargo.toml  README.md
src/: repl.rs
src/repl/: completer.rs  highlighter.rs  mod.rs
